// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contentVisibility renders 0 1`] = `
Array [
  .c0 {
  content-visibility: 0;
}

<div
    className="c0"
  />,
  .c0 {
  content-visibility: 0;
}

<div
    className="c0"
  />,
  .c0 {
  content-visibility: 0;
}

<div
    className="c0"
  />,
  .c0 {
  content-visibility: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`contentVisibility renders function 1`] = `
Array [
  .c0 {
  content-visibility: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  content-visibility: has;
}

<div
    className="c0"
  />,
  .c0 {
  content-visibility: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  content-visibility: has;
}

<div
    className="c0"
  />,
]
`;

exports[`contentVisibility renders invalid theme path 1`] = `
Array [
  .c0 {
  content-visibility: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  content-visibility: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  content-visibility: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  content-visibility: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`contentVisibility renders negative number 1`] = `
Array [
  .c0 {
  content-visibility: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  content-visibility: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  content-visibility: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  content-visibility: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`contentVisibility renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  content-visibility: July;
}

@media screen and (min-width:November) {
  .c0 {
    content-visibility: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content-visibility: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content-visibility: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    content-visibility: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  content-visibility: July;
}

@media screen and (min-width:November) {
  .c0 {
    content-visibility: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content-visibility: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content-visibility: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    content-visibility: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  content-visibility: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    content-visibility: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content-visibility: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content-visibility: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    content-visibility: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  content-visibility: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    content-visibility: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content-visibility: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content-visibility: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    content-visibility: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`contentVisibility renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    content-visibility: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content-visibility: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content-visibility: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    content-visibility: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    content-visibility: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content-visibility: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content-visibility: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    content-visibility: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    content-visibility: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content-visibility: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content-visibility: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    content-visibility: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    content-visibility: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content-visibility: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    content-visibility: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    content-visibility: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`contentVisibility renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  content-visibility: July;
}

@media May {
  .c0 {
    content-visibility: August;
  }
}

@media April {
  .c0 {
    content-visibility: September;
  }
}

@media January {
  .c0 {
    content-visibility: November;
  }
}

@media April {
  .c0 {
    content-visibility: August;
  }
}

@media June {
  .c0 {
    content-visibility: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  content-visibility: July;
}

@media May {
  .c0 {
    content-visibility: August;
  }
}

@media April {
  .c0 {
    content-visibility: September;
  }
}

@media January {
  .c0 {
    content-visibility: November;
  }
}

@media April {
  .c0 {
    content-visibility: August;
  }
}

@media June {
  .c0 {
    content-visibility: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  content-visibility: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    content-visibility: November;
  }
}

@media April {
  .c0 {
    content-visibility: January;
  }
}

@media January {
  .c0 {
    content-visibility: December;
  }
}

@media April {
  .c0 {
    content-visibility: April;
  }
}

@media June {
  .c0 {
    content-visibility: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  content-visibility: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    content-visibility: November;
  }
}

@media April {
  .c0 {
    content-visibility: January;
  }
}

@media January {
  .c0 {
    content-visibility: December;
  }
}

@media April {
  .c0 {
    content-visibility: April;
  }
}

@media June {
  .c0 {
    content-visibility: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`contentVisibility renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    content-visibility: July;
  }
}

@media April {
  .c0 {
    content-visibility: August;
  }
}

@media January {
  .c0 {
    content-visibility: September;
  }
}

@media April {
  .c0 {
    content-visibility: November;
  }
}

@media June {
  .c0 {
    content-visibility: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    content-visibility: July;
  }
}

@media April {
  .c0 {
    content-visibility: August;
  }
}

@media January {
  .c0 {
    content-visibility: September;
  }
}

@media April {
  .c0 {
    content-visibility: November;
  }
}

@media June {
  .c0 {
    content-visibility: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    content-visibility: January;
  }
}

@media April {
  .c0 {
    content-visibility: December;
  }
}

@media January {
  .c0 {
    content-visibility: April;
  }
}

@media April {
  .c0 {
    content-visibility: May;
  }
}

@media June {
  .c0 {
    content-visibility: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    content-visibility: January;
  }
}

@media April {
  .c0 {
    content-visibility: December;
  }
}

@media January {
  .c0 {
    content-visibility: April;
  }
}

@media April {
  .c0 {
    content-visibility: May;
  }
}

@media June {
  .c0 {
    content-visibility: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`contentVisibility renders postitive number 1`] = `
Array [
  .c0 {
  content-visibility: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  content-visibility: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  content-visibility: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  content-visibility: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`contentVisibility renders string 1`] = `
Array [
  .c0 {
  content-visibility: July;
}

<div
    className="c0"
  />,
  .c0 {
  content-visibility: July;
}

<div
    className="c0"
  />,
  .c0 {
  content-visibility: June;
}

<div
    className="c0"
  />,
  .c0 {
  content-visibility: June;
}

<div
    className="c0"
  />,
]
`;

exports[`contentVisibility renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`contentVisibility renders valid theme path 1`] = `
Array [
  .c0 {
  content-visibility: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  content-visibility: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  content-visibility: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  content-visibility: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
